--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "next build && next export && touch out/.nojekyll"
+    "build": "next build && next export && touch out/.nojekyll",
+    "deploy": "git subtree push --prefix out origin gh-pages"
   },
   "license": "MIT"
 }
